# PathTracer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  Direction.cpp  Direction.hpp  IntersectableObject.hpp  Intersection.cpp  Intersection.hpp  LICENSE  LightSource.hpp  LodePNG.cpp  LodePNG.hpp  Material.cpp  Material.hpp  MultiCoreYART.cpp  MultiCoreYART.hpp  PathTracer  Plane.cpp  Plane.hpp  Point.cpp  Point.hpp  PointLight.cpp  PointLight.hpp  README.md  Ray.cpp  Ray.hpp  RaySetup.cpp  RaySetup.hpp  Scene.cpp  Scene.hpp  Screen.cpp  Screen.hpp  Sphere.cpp  Sphere.hpp  SphereLight.cpp  SphereLight.hpp  YART.cpp  YART.hpp  config.hpp  (+1 more)
